# clang-xform

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  README.md  clang_xform_config.hpp.in
include/: ApplyReplacements.hpp  CodeXformAction.hpp  CodeXformActionFactory.hpp  CodeXformException.hpp  CommandLineArgs.hpp  CommandLineArgsUtil.hpp  CoreUtil.hpp  DiagnosticLogger.hpp  Logger.hpp  MatchCallbackBase.hpp  MatchCallbackDef.hpp  MatcherFactory.hpp  MatcherHelper.hpp  MyASTMatchers.hpp  MyFrontendAction.hpp  MyMatchCallback.hpp  MyReplacementsYaml.hpp  ProgramOptions.hpp  TestingUtil.hpp  ToolingUtil.hpp  clang_xform_config.hpp  cxxlog.hpp  cxxopts.hpp
scripts/: gen-header-compdb.py  gen-matcher.py  gen-test.py  gen_test_compdb.py  generate_compdb.py  update-compile-commands.py
scripts/template/: MatcherTemplate.cpp  OptionMatcherTemplate.cpp  TestTemplate.cpp  compile_commands.json
src/: ApplyReplacements.cpp  CodeXformAction.cpp  CodeXformActionFactory.cpp  CommandLineArgs.cpp  CommandLineArgsUtil.cpp  CoreUtil.cpp  MatchCallbackBase.cpp  MyFrontendAction.cpp  ProgramOptions.cpp  TestingUtil.cpp  ToolingUtil.cpp  main.cpp
src/matchers/rename/: RenameFcn.cpp
test/: .gitignore  CMakeLists.txt
test/framework/: MockMatchCallback.hpp  tCommandLineArgs.cpp  tCommandLineArgsUtil.cpp  tCoreUtil.cpp  tMatchCallbackBase.cpp  tMatcherFactory.cpp  tMatcherHelper.cpp  tTestingUtil.cpp
test/rename/RenameFcn/: clang-xform.log.gold  compile_commands.json  example.cpp  example.cpp.gold  tRenameFcn.cpp
